IRtest_out/side_effect.err
irs/side_effect.ll:45:46: error: '@A11' defined with type '<{ [3 x i32] }>*' but expected '[3 x i32]*'
  %v44 = getelementptr [3 x i32], [3 x i32]* @A11, i32 0, i32 %v43
                                             ^
1 error generated.
